# FEUP-CAL

./: .gitignore  Formalização.docx  README.md  README.txt  exemplo.puml  report.tex
Exams/: 2017.md
Exams/2017/: 2017.md
Exams/2017 - Recurso/: 2017 - Recurso.md
Exams/2018/: 2018.md
Exams/2018 - Recurso/: 1.cpp  2018 - Recurso.md
Exams/2020/: 2020.md
Exercises/cal_fp01_CLion/: main.cpp
Exercises/cal_fp03_CLion/: CMakeLists.txt
Exercises/cal_fp06_CLion/: FichaJUNG.cpp
MapExtraction/: edges.csv  getGraph.py
MapExtraction/Example/: edges.csv  getGraph.py  nodes.csv
Project/: README.md
Project/lib/: graphviewer.cpp
Project/src/: Utils.cpp
Report/: report.tex
TourMateApp/: CMakeLists.txt  Category.cpp  Category.h  CsvReader.cpp  CsvReader.h  Edge.cpp  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h  POI.cpp  POI.h  Street.cpp  Street.h
TourMateApp/src/: Edge.h
cal_fp01_CLion/: main.cpp
cal_fp01_CLion/Tests/: Change.cpp  Change.h  Factorial.h  Partitioning.cpp  (+5 more)
data/: POI_PORTO.txt  edges.csv  nodes_PORTO.csv
docs/: exemplo.puml  report.tex
src/: .gitignore  CMakeLists.txt  Edge.h  Errors.h  Generator.cpp  Generator.h  Graph.cpp  Graph.h  GraphFactory.cpp  GraphFactory.h  Utils.cpp  Utils.h  Vertex.cpp  Vertex.h  beautifulScript.bat  doxyfile  main.cpp  utils.cpp  utils.h
src/Graph/: Edge.cpp  Edge.h  FloydStorage.cpp  FloydStorage.h  Graph.cpp  Graph.h  GraphFactory.cpp  GraphFactory.h  PoiStorage.cpp  PoiStorage.h  Vertex.cpp  Vertex.h  floydStorage.cpp  floydStorage.h
src/Storage/: FloydStorage.cpp  FloydStorage.h  PoiStorage.cpp  PoiStorage.h
src/UserInterface/: UserInterface.cpp  UserInterface.h
src/src/: CMakeLists.txt
src/src/UserInterface/: UserInterface.cpp
(+445 files in other folders)
